# vedic-calc

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: ACCURACY_REPORT.md  accuracy.py
benchmarks/fixtures/: benchmark_reference.json
docs/: accuracy.md  api.md  architecture.md  benchmarks.md  comparison.md  concepts.md  contributing.md  index.md
docs/stylesheets/: extra.css
src/vedic_calc/: __init__.py
src/vedic_calc/chart/: __init__.py  aspects.py  calculator.py  chalit.py  chandrashtama.py  combustion.py  divisional.py  functional.py  houses.py  relationships.py  renderer.py  sade_sati.py  sahams.py  special_lagnas.py  states.py  sudarshana.py  timeline.py  transits.py  upagrahas.py
src/vedic_calc/compatibility/: __init__.py  avakhada.py  calculator.py  constants.py  papasamyam.py  porutham.py
src/vedic_calc/core/: __init__.py  constants.py  ephemeris.py  helpers.py  search.py  types.py
src/vedic_calc/dasha/: __init__.py  ashtottari.py  calculator.py  narayana.py  yogini.py
src/vedic_calc/dosha/: __init__.py  calculator.py  scorer.py
src/vedic_calc/jaimini/: __init__.py  arudha.py  karakas.py
src/vedic_calc/kp/: __init__.py  calculator.py  houses.py  significators.py  sublords.py
src/vedic_calc/muhurta/: __init__.py  calculator.py  solver.py
src/vedic_calc/numerology/: __init__.py  calculator.py
src/vedic_calc/panchanga/: __init__.py  calculator.py  festivals.py  transitions.py
src/vedic_calc/prashna/: __init__.py  chart.py  evaluator.py  tajika.py
src/vedic_calc/strength/: __init__.py  (+2 more)
tests/: test_accuracy.py  test_additional_dashas.py  test_aspects.py  test_chart.py  test_combustion.py  test_compatibility.py  test_constants.py  test_dasha.py  test_divisional.py  test_doshas.py  test_helpers.py  test_houses_analysis.py  test_jaimini.py  test_kp.py  test_muhurta.py  test_muhurta_solver.py  test_numerology.py  test_panchanga.py  test_porutham.py  test_prashna.py  test_renderer.py  test_sahams.py  test_sprint1.py  test_sprint2.py  test_sprint3.py  test_states.py  test_strength.py  test_transits.py  test_varshaphal.py  test_yogas.py
tests/comparison/: conftest.py  test_compare_ashtakavarga.py  test_compare_aspects.py  test_compare_dasha.py  test_compare_divisional.py  test_compare_doshas.py  test_compare_muhurta.py  test_compare_shadbala.py  test_compare_yogas.py
(+5 files in other folders)
