[project]
name = "vedic-calc"
version = "0.1.0"
description = "Open-source Vedic astrology calculation library built on Swiss Ephemeris"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyswisseph>=2.10",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
]
comparison = [
    "PyJHora>=1.0",
    "pytest-xdist>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vedic_calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
